Test to run action

--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -2,9 +2,11 @@ name: Build extension
 
 on:
   push:
-    branches: '*'
+    branches: 
+    - "*"
   pull_request:
-    branches: '*'
+    branches: 
+    - "*"
 
 jobs:
   build:
