--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -3,11 +3,10 @@ name: Build extension
 on:
   push:
     branches: 
-    - "*"
-    - "**"
+    - '*'
   pull_request:
     branches: 
-    - "*"
+    - '*'
 
 jobs:
   build:
@@ -48,7 +47,7 @@ jobs:
           yarn-
     
     - name: Install dependencies
-      run: python -m pip install -U jupyterlab~=3.0 jupyter_packaging~=0.7.9
+      run: python -m pip install -U jupyterlab~=3.0 jupyter_packaging~=0.7.9 jupyterlab_widgets~=1.0.0
     - name: Build the extension
       working-directory: js
       run: |
