--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   test:
-
     runs-on: ${{ matrix.os }}
 
     defaults:
@@ -61,7 +60,39 @@ jobs:
       run: |
         python -m pytest -vs nglview/tests --cov=nglview --cov-report=html --disable-pytest-warnings
 
-    - name: Code coverage with coveralls
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+    #- name: Code coverage with coveralls
+    #  env:
+    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #  run: |
+    #    coveralls
+
+    - name: Check installation with pip
+      run: |
+        python setup.py sdist
+        pip install dist/*gz
+        python -c "import nglview as nv; print(nv.__version__)"
+
+  conda-build:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        shell: bash -l {0}
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          auto-activate-base: false
+          activate-environment: deploy
+          environment-file: .github/deploy.yml
+          python-version: 3.8
+
+      - name: Build conda recipe
+        run: |
+          conda build \
+                --verify \
+                -c conda-forge \
+                devtools/conda-recipe
