Re-enable coveralls step

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,11 +48,11 @@ jobs:
       run: |
         python -m pytest -vs nglview/tests --cov=nglview --cov-report=html --disable-pytest-warnings
 
-    #- name: Code coverage with coveralls
-    #  env:
-    #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #  run: |
-    #    coveralls
+    - name: Code coverage with coveralls
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        coveralls
 
     - name: Check installation with pip
       run: |
