--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7]
 
     steps:
     - name: Checkout nglview repository
@@ -25,7 +25,7 @@ jobs:
     - name: Cache conda
       uses: actions/cache@v1
       env:
-        CACHE_NUMBER: 1  # Increase this value to reset cache if .github/nglview-gha.yml has not changed
+        CACHE_NUMBER: 2  # Increase this value to reset cache if .github/nglview-gha.yml has not changed
       with:
         path: ~/conda_pkgs_dir
         key:
@@ -38,6 +38,8 @@ jobs:
         auto-activate-base: false
         activate-environment: nglview-gha
         environment-file: .github/nglview-gha.yml
+        mamba-version: "*"
+        channels: conda-forge,ambermd
         channel-priority: true
         python-version: ${{ matrix.python-version }}
         use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
