Fix spelling mistake

--- a/js/package.json
+++ b/js/package.json
@@ -24,7 +24,7 @@
   },
   "contributors": [
     {
-      "name": "Hay Nguyen",
+      "name": "Hai Nguyen",
       "email": "hainm.comp@gmail.com"
     }
   ],
