--- a/js/package.json
+++ b/js/package.json
@@ -34,6 +34,7 @@
     "url": "https://github.com/nglviewer/nglview.git"
   },
   "scripts": {
+    "prepublish": "jlpm build:prod && webpack && cp -r nglview-js-widgets/labextension/* ../nglview/labextension/",
     "build": "jlpm run build:lib && jlpm run build:labextension:dev",
     "build:prod": "jlpm run build:lib && jlpm run build:labextension",
     "build:labextension": "jupyter labextension build .",
