--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -7,7 +7,7 @@ channels:
 dependencies:
   - python>=3.6
   - pip
-  - jupyter_packaging
+  - jupyter-packaging
   - qcelemental
   - traitlets
   - ipywidgets
