--- a/js/package.json
+++ b/js/package.json
@@ -35,7 +35,7 @@
   },
   "scripts": {
     "prepublish": "jlpm build:prod && webpack && jlpm run copy:labextension",
-    "copy:labextension": "cp -r nglview-js-widgets/labextension/* ../nglview/labextension/",
+    "copy:labextension": "cp -r nglview-js-widgets/labextension/* ../nglview/staticlab/",
     "build": "jlpm run build:lib && jlpm run build:labextension:dev",
     "build:prod": "jlpm run build:lib && jlpm run build:labextension",
     "build:labextension": "jupyter labextension build .",
