Pin more versions; update README to reflect pinned version

--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -10,7 +10,7 @@ dependencies:
   - jupyter-packaging
   - qcelemental
   - traitlets
-  - ipywidgets
+  - ipywidgets==7.*
   - mock
   - coverage
   - nose
