Unpin ipywidgets version

--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -10,7 +10,7 @@ dependencies:
   - jupyter-packaging
   - qcelemental
   - traitlets
-  - ipywidgets==7.*
+  - ipywidgets
   - mock
   - coverage
   - nose
