--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [3.10]
+        python-version: [3.9]
 
     steps:
     - name: Checkout nglview repository
@@ -39,7 +39,7 @@ jobs:
         activate-environment: nglview-gha
         environment-file: .github/nglview-gha.yml
         mamba-version: "*"
-        channels: conda-forge,ambermd
+        channels: conda-forge
         channel-priority: true
         python-version: ${{ matrix.python-version }}
         use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
