Require latest comm for CI

--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -9,7 +9,8 @@ dependencies:
   - jupyter-packaging
   - qcelemental
   - traitlets
-  - ipywidgets
+  - ipywidgets>=8.0.5
+  - comm>=0.1.3  # see https://github.com/jupyter-widgets/ipywidgets/issues/3729
   - mock
   - coverage
   - nose
