--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -11,6 +11,7 @@ dependencies:
   - traitlets
   - ipywidgets>=8.0.5
   - comm>=0.1.3  # see https://github.com/jupyter-widgets/ipywidgets/issues/3729
+  - ipykernel
   - mock
   - coverage
   - nose
