--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -12,6 +12,7 @@ dependencies:
   - ipywidgets>=8.0.5
   - comm>=0.1.3  # see https://github.com/jupyter-widgets/ipywidgets/issues/3729
   - ipykernel
+  - notebook
   - mock
   - coverage
   - nose
