--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
     - python>=3.6
     - pip
     - pytest
-    - jupyterlab
+    - jupyterlab~=3.0
     - nodejs
     - yarn
     - ipywidgets
