--- a/js/package.json
+++ b/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nglview-js-widgets",
-  "version": "3.0.9",
+  "version": "3.1.0",
   "description": "nglview-js-widgets",
   "keywords": [
     "ipython",
@@ -64,7 +64,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.5",
+    "@jupyterlab/builder": "^3.0.5 || ^4",
     "@types/chai": "^4.1.4",
     "@types/expect.js": "^0.3.29",
     "@types/mocha": "^2.2.48",
