--- a/nglview/staticlab/package.json
+++ b/nglview/staticlab/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nglview-js-widgets",
-  "version": "3.0.9",
+  "version": "3.1.0",
   "description": "nglview-js-widgets",
   "keywords": [
     "ipython",
@@ -64,7 +64,7 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.5",
+    "@jupyterlab/builder": "^3.0.5 || ^4",
     "@types/chai": "^4.1.4",
     "@types/expect.js": "^0.3.29",
     "@types/mocha": "^2.2.48",
@@ -101,7 +101,7 @@
       }
     },
     "_build": {
-      "load": "static/remoteEntry.17ae7a1ccd60d62c2051.js",
+      "load": "static/remoteEntry.c6e200d60ba0b0742635.js",
       "extension": "./extension",
       "style": "./style"
     }
