--- a/js/package.json
+++ b/js/package.json
@@ -45,8 +45,8 @@
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:labextension": "rimraf myextension/labextension",
     "clean:all": "yarn run clean:lib && yarn run clean:labextension",
-    "eslint": "eslint . --ext .ts,.tsx --fix",
-    "eslint:check": "eslint . --ext .ts,.tsx",
+    "eslint": "eslint '**/*.ts' '**/*.tsx' --fix",
+    "eslint:check": "eslint '**/*.ts' '**/*.tsx'",
     "install:extension": "jupyter labextension develop --overwrite .",
     "prepare": "yarn run clean && yarn run build:prod",
     "watch": "run-p watch:src watch:labextension",
@@ -74,7 +74,7 @@
     "@typescript-eslint/parser": "^4.8.1",
     "babel-register": "^6.11.6",
     "css-loader": "^0.23.1",
-    "eslint": "^7.14.0",
+    "eslint": "^9.5",
     "file-loader": "^1.1.6",
     "json-loader": "^0.5.4",
     "mkdirp": "^1.0.3",
