--- a/js/package.json
+++ b/js/package.json
@@ -45,8 +45,8 @@
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:labextension": "rimraf myextension/labextension",
     "clean:all": "yarn run clean:lib && yarn run clean:labextension",
-    "eslint": "eslint '**/*.ts' '**/*.tsx' --fix",
-    "eslint:check": "eslint '**/*.ts' '**/*.tsx'",
+    "eslint": "eslint '**/*.ts' --fix",
+    "eslint:check": "eslint '**/*.ts'",
     "install:extension": "jupyter labextension develop --overwrite .",
     "prepare": "yarn run clean && yarn run build:prod",
     "watch": "run-p watch:src watch:labextension",
