--- a/js/package.json
+++ b/js/package.json
@@ -75,8 +75,8 @@
     "babel-register": "^6.11.6",
     "css-loader": "^0.23.1",
     "eslint": "^8.5.6",
-    "file-loader": "^1.1.6",
-    "json-loader": "^0.5.4",
+    "file-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
     "mkdirp": "^1.0.3",
     "ngl": "2.4.0",
     "npm-run-all": "^4.1.5",
@@ -84,7 +84,8 @@
     "rimraf": "^3.0.2",
     "style-loader": "^0.13.1",
     "typescript": "~5.4.5",
-    "webpack": "^5.96.1"
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "sideEffects": [
     "style/*.css",
