--- a/js/package.json
+++ b/js/package.json
@@ -73,6 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "babel-register": "^6.11.6",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.23.1",
     "eslint": "^8.5.6",
     "file-loader": "^6.2.0",
@@ -85,7 +86,9 @@
     "style-loader": "^0.13.1",
     "typescript": "~5.4.5",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.5",
+    "babel-loader": "^8.2.2"
   },
   "sideEffects": [
     "style/*.css",
