--- a/js/package.json
+++ b/js/package.json
@@ -87,8 +87,8 @@
     "typescript": "~5.4.5",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.5",
-    "babel-loader": "^8.2.2"
+    "babel-loader": "^8.2.2",
+    "@babel/plugin-transform-object-rest-spread": "^7.14.5"
   },
   "sideEffects": [
     "style/*.css",
