--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -2,10 +2,10 @@ name: Build extension
 
 on:
   push:
-    branches: 
+    branches:
     - '*'
   pull_request:
-    branches: 
+    branches:
     - '*'
 
 jobs:
@@ -18,13 +18,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
        node-version: '20.x'
+       npm-version: '10.9.0'
     - name: Install Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.7'
+        python-version: '3.12'
         architecture: 'x64'
-    
-    
+
+
     - name: Setup pip cache
       uses: actions/cache@v2
       with:
@@ -45,7 +46,8 @@ jobs:
         key: yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           yarn-
-    
+        yarn-version: '1.22.19'
+
     - name: Install dependencies
       run: python -m pip install -U jupyterlab jupyter_packaging jupyterlab_widgets
     - name: Build the extension
