--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -50,6 +50,8 @@ jobs:
 
     - name: Install dependencies
       run: python -m pip install -U jupyterlab jupyter_packaging jupyterlab_widgets
+    - name: Use existing lockfile
+      run: yarn install --frozen-lockfile
     - name: Build the extension
       working-directory: js
       run: |
