--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -13,40 +13,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Install node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
        node-version: '20.x'
        npm-version: '10.9.0'
     - name: Install Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.12'
         architecture: 'x64'
 
-
     - name: Setup pip cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ~/.cache/pip
-        key: pip-3.7-${{ hashFiles('package.json') }}
+        key: pip-3.12-${{ hashFiles('package.json') }}
         restore-keys: |
-          pip-3.7-
+          pip-3.12-
           pip-
 
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(yarn cache dir)"
     - name: Setup yarn cache
-      uses: actions/cache@v2
-      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      uses: actions/cache@v3
+      id: yarn-cache
       with:
         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
         key: yarn-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           yarn-
-        yarn-version: '1.22.19'
 
     - name: Install dependencies
       run: python -m pip install -U jupyterlab jupyter_packaging jupyterlab_widgets
@@ -55,9 +53,4 @@ jobs:
     - name: Build the extension
       working-directory: js
       run: |
-        jlpm
-        jlpm run eslint:check
-        python -m pip install .
-
-        # jupyter labextension list 2>&1 | grep -ie "nglview-js-widgets.*OK"
-        # python -m jupyterlab.browser_check # FIXME: off for debugging, should turn on
+        npm install
