--- a/js/package.json
+++ b/js/package.json
@@ -61,7 +61,8 @@
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.4",
     "ngl": "2.4.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.5 || ^4",
