--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,20 @@ jobs:
         python-version: ${{ matrix.python-version }}
         use-only-tar-bz2: false  # https://github.com/conda-incubator/setup-miniconda/issues/264
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 'lts/*'
+
+    - name: Install Yarn
+      run: corepack enable
+
+    - name: Build labextension
+      run: |
+        cd js
+        npm install
+        cd ..
+
     - name: Run tests
       run: |
         python -m pytest -vs tests --cov=nglview --cov-report=html --disable-pytest-warnings
