--- a/.github/workflows/build-extension.yml
+++ b/.github/workflows/build-extension.yml
@@ -1,9 +1,6 @@
 name: Build extension
 
 on:
-  push:
-    branches:
-    - '*'
   pull_request:
     branches:
     - '*'
@@ -14,11 +11,15 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Install node
+
+    - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-       node-version: '20.x'
-       npm-version: '10.9.0'
+        node-version: 'lts/*'
+
+    - name: Install Yarn
+      run: corepack enable
+
     - name: Install Python
       uses: actions/setup-python@v4
       with:
@@ -37,6 +38,7 @@ jobs:
     - name: Get yarn cache directory path
       id: yarn-cache-dir-path
       run: echo "::set-output name=dir::$(yarn cache dir)"
+
     - name: Setup yarn cache
       uses: actions/cache@v3
       id: yarn-cache
@@ -48,9 +50,10 @@ jobs:
 
     - name: Install dependencies
       run: python -m pip install -U jupyterlab jupyter_packaging jupyterlab_widgets
+
     - name: Use existing lockfile
       run: yarn install --frozen-lockfile
+
     - name: Build the extension
       working-directory: js
-      run: |
-        npm install
+      run: npm install
