--- a/js/package.json
+++ b/js/package.json
@@ -52,6 +52,7 @@
     "watch": "run-p watch:src watch:labextension",
     "watch:src": "tsc -w",
     "watch:labextension": "jupyter labextension watch .",
+    "watch:install": "nodemon --watch src/widget_ngl.ts --exec 'npm install'",
     "test": "mocha"
   },
   "dependencies": {
@@ -88,7 +89,8 @@
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
     "babel-loader": "^8.2.2",
-    "@babel/plugin-transform-object-rest-spread": "^7.14.5"
+    "@babel/plugin-transform-object-rest-spread": "^7.14.5",
+    "nodemon": "^2.0.22"
   },
   "sideEffects": [
     "style/*.css",
