--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,14 @@ jobs:
       with:
         node-version: 'lts/*'
 
+    - name: Cache Node.js modules
+      uses: actions/cache@v4
+      with:
+        path: js/node_modules
+        key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-modules-
+
     - name: Install Yarn
       run: corepack enable
 
