--- a/js/package.json
+++ b/js/package.json
@@ -40,7 +40,7 @@
     "build:prod": "yarn run build:lib && yarn run build:labextension",
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
-    "build:lib": "tsc",
+    "build:lib": "tsc && mkdir -p lib/molstarview && cp src/molstarview/*.css lib/molstarview/",
     "clean": "yarn run clean:lib",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:labextension": "rimraf myextension/labextension",
