--- a/js/package.json
+++ b/js/package.json
@@ -52,7 +52,7 @@
     "watch": "run-p watch:src watch:labextension",
     "watch:src": "tsc -w",
     "watch:labextension": "jupyter labextension watch .",
-    "watch:install": "nodemon --watch src/widget_ngl.ts --exec 'npm install'",
+    "watch:install": "nodemon --watch src --watch package.json --exec 'npm install'",
     "test": "mocha"
   },
   "dependencies": {
