--- a/devtools/conda-recipe/meta.yaml
+++ b/devtools/conda-recipe/meta.yaml
@@ -12,7 +12,7 @@ requirements:
     - traitlets
   run:
     - python
-    - numpy
+    - numpy<2.3
     - ipywidgets
     - notebook >4.1
     - jupyter
