chore: request jupyter_packaging>=0.12.2 only for python3.13 or later

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,10 @@
 [build-system]
-requires = ["jupyter_packaging>=0.12.2", "setuptools>=75.6.0", "wheel"]
+requires = [
+  "jupyter_packaging>=0.7.9; python_version<3.13",
+  "jupyter_packaging>=0.12.2; python_version>=3.13",
+  "setuptools>=75.6.0",
+  "wheel",
+]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
