chore: use jupyter_packaging>=0.12.2 for Python 3.13+ and fix broken CI (#1164)

--- a/.github/nglview-gha.yml
+++ b/.github/nglview-gha.yml
@@ -22,8 +22,9 @@ dependencies:
   - matplotlib
   - moviepy
   - imageio
-  - pillow
+  - pillow<11.2.1
   - numpy
+  - numpy<2.3.0
   - rdkit
   - mdanalysis
   - mdtraj
