--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
     - coveralls
 
     # Scientific
-    - numpy
+    - numpy<2.3
     - pandas
     - ase
     - parmed
@@ -34,4 +34,4 @@ dependencies:
     - matplotlib
     - moviepy
     - imageio
-    - pillow
+    - pillow<11.2.1
